# VapourSynth-BezierCurve

./: CMakeLists.txt  LICENSE  README.md  VapourSynth-BezierCurve.sln  meson.build
VapourSynth-BezierCurve/: BezierCurve.cpp  BezierCurve.h  CubicBezierCurve.cpp  QuadraticBezierCurve.cpp  VapourSynth-BezierCurve.cpp  VapourSynth-BezierCurve.vcxproj  VapourSynth-BezierCurve.vcxproj.filters
